users and test can be deleted anytime effortlessly

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -22,7 +22,7 @@ successMessage=Everything is alright!
 homePage=Home Page
 #impr-ideas.html
 disapprove=Disapprove
-# index.html
+#index.html
 welcome=Welcome to TestingEz
 slogan=Start testing whomever you want on whatever you want!
 signIn=Sign In
@@ -88,6 +88,7 @@ responseTime=Response Time:
 updatedAt=Updated At:
 creator=Creator:
 correctAnswerr=Correct answer:
+deleteTest = Delete Test
 #test-join.html
 enterTestCode=Enter Test Code:
 join=join
