--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -13,21 +13,29 @@ features=Функции
 pricing=Цени
 faqs=ЧЗВ
 about=За нас
+#all-tests.html
 thereArentAnyTestSoFar=Няма налични тестове засега.
 details=подробности
+#failure/success .html
 failureMessage=Упс! Нещо се обърка...
 successMessage=Всичко е наред!
 homePage=Начална страница
+#impr-ideas.html
 disapprove=Не одобрявам
+#index.html
 welcome=Добре дошли в TestingEz
 slogan=Започнете да тествате когото искате на каквото искате!
 signIn=Вход
 signUp=Регистрация
+#my-results.html
 youDontHaveAnyResultsToShow=Нямате резултати за показване.
 date=Дата:
+#my-tests.html
 youDontHaveAnyTestsSoFar=Нямате тестове засега.
 lastUpdated=Последна актуализация:
+#question-answer.html
 submit=изпрати
+#questions-create.html
 questionNumber=Въпрос №
 enterYourQuestion=Въведете въпроса си
 enterAnswer1=Въведете отговор 1
@@ -38,15 +46,18 @@ correctAnswer=правилен отговор
 points=точки
 complete=Завърши
 cancel=Отказ
+#show-results.html
 resultSummary=Обобщение на резултатите
 score=Резултат:
 pointss=Точки:
+#sign-in.html
 invalidCredentials=невалидни данни за вход
 login=Вход
 loginUsername=Потребителско име:
 enterUsername=Въведете потребителско име
 loginPassword=Парола:
 enterPassword=Въведете парола
+#sign-up.html
 usernameInUse=Това потребителско име вече е заето.
 passwordsNotMatching=Паролите НЕ съвпадат.
 emailInUse=Този имейл вече е използван.
@@ -59,6 +70,7 @@ firstName=Име:
 lastName=Фамилия:
 registerEmail=Имейл:
 registerPhone=Телефон:
+#test-create.html
 testName=Име на теста:
 description=Описание:
 optional=(Незадължително)
@@ -71,18 +83,23 @@ questionsCount=Брой въпроси:
 status=Статус:
 openClosed=(отворен/затворен)
 next=следващ
+#test-details.html
 responseTime=Време за отговор:
 updatedAt=Актуализиран на:
 creator=Създател:
 correctAnswerr=Правилен отговор:
+deleteTest=Изтрий Тест
+#test-join.html
 enterTestCode=Въведете код за тест:
 join=присъединяване
 testNotFound=Съжаляваме, не можахме да намерим този тест!
 testClosed=Съжаляваме, изглежда, че тестът е затворен!
 testAttended=Съжаляваме, вече сте участвали в този тест!
+#test-preview.html
 madeBy=Създаден от
 createdAt=Създаден на:
 start=Започни
+#user-home.html
 testOfTheDay=Тест на деня
 check=провери
 miscellaneous=Разни
