--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -13,21 +13,29 @@ features=Funktionen
 pricing=Preise
 faqs=FAQs
 about=Über uns
+#all-tests.html
 thereArentAnyTestSoFar=Es gibt noch keine Tests.
 details=Einzelheiten
+#failure/success .html
 failureMessage=Ups! Etwas ist schief gelaufen...
 successMessage=Alles ist in Ordnung!
 homePage=Startseite
+#impr-ideas.html
 disapprove=Ablehnen
+#index.html
 welcome=Willkommen bei TestingEz
 slogan=Beginnen Sie, jeden zu testen, auf was auch immer Sie wollen!
 signIn=Anmelden
 signUp=Registrieren
+#my-results.html
 youDontHaveAnyResultsToShow=Sie haben keine Ergebnisse zum Anzeigen.
 date=Datum:
+#my-tests.html
 youDontHaveAnyTestsSoFar=Sie haben noch keine Tests.
 lastUpdated=Letzte Aktualisierung:
+#question-answer.html
 submit=einreichen
+#questions-create.html
 questionNumber=Frage Nr.
 enterYourQuestion=Geben Sie Ihre Frage ein
 enterAnswer1=Antwort 1 eingeben
@@ -38,15 +46,18 @@ correctAnswer=richtig Antwort
 points=Punkte
 complete=Fertig
 cancel=Abbrechen
+#show-results.html
 resultSummary=Ergebnisübersicht
 score=Ergebnis:
 pointss=Punkte:
+#sign-in.html
 invalidCredentials=Ungültige Anmeldedaten
 login=Anmelden
 loginUsername=Benutzername:
 enterUsername=Benutzernamen eingeben
 loginPassword=Passwort:
 enterPassword=Passwort eingeben
+#sign-up.html
 usernameInUse=Dieser Benutzername ist bereits vergeben.
 passwordsNotMatching=Passwörter stimmen NICHT überein.
 emailInUse=Diese E-Mail wird bereits verwendet.
@@ -59,6 +70,7 @@ firstName=Vorname:
 lastName=Nachname:
 registerEmail=E-Mail:
 registerPhone=Telefon:
+#test-create.html
 testName=Testname:
 description=Beschreibung:
 optional=(Optional)
@@ -71,18 +83,23 @@ questionsCount=Anzahl der Fragen:
 status=Status:
 openClosed=(offen/geschlossen)
 next=weiter
+#test-details.html
 responseTime=Antwortzeit:
 updatedAt=Aktualisiert am:
 creator=Ersteller:
 correctAnswerr=Richtige Antwort:
 enterTestCode=Testcode eingeben:
+deleteTest = Test löschen
+#test-join.html
 join=beitreten
 testNotFound=Entschuldigung, wir konnten diesen Test nicht finden!
 testClosed=Entschuldigung, scheint, dass der Test geschlossen ist!
 testAttended=Entschuldigung, Sie haben diesen Test bereits besucht!
+#test-preview.html
 madeBy=Erstellt von
 createdAt=Erstellt am:
 start=Start
+#user-home.html
 testOfTheDay=Test des Tages
 check=überprüfen
 miscellaneous=Verschiedenes
