--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -13,21 +13,29 @@ features=Caractéristiques
 pricing=Tarification
 faqs=FAQs
 about=À propos
+#all-tests.html
 thereArentAnyTestSoFar=Il n'y a pas encore de tests.
 details=détails
+#failure/success .html
 failureMessage=Oups! Quelque chose s'est mal passé...
 successMessage=Tout va bien!
 homePage=Page d'accueil
+#impr-ideas.html
 disapprove=Désapprouver
+#index.html
 welcome=Bienvenue chez TestingEz
 slogan=Commencez à tester qui vous voulez sur ce que vous voulez!
 signIn=Se connecter
 signUp=S'inscrire
+#my-results.html
 youDontHaveAnyResultsToShow=Vous n'avez aucun résultat à afficher.
 date=Date:
+#my-tests.html
 youDontHaveAnyTestsSoFar=Vous n'avez pas encore de tests.
 lastUpdated=Dernière mise à jour:
+#question-answer.html
 submit=soumettre
+#questions-create.html
 questionNumber=Question n°
 enterYourQuestion=Entrez votre question
 enterAnswer1=Entrez la réponse 1
@@ -38,15 +46,18 @@ correctAnswer=bonne réponse
 points=points
 complete=Terminer
 cancel=Annuler
+#show-results.html
 resultSummary=Résumé des résultats
 score=Score:
 pointss=Points:
+#sign-in.html
 invalidCredentials=identifiants invalides
 login=Connexion
 loginUsername=Nom d'utilisateur:
 enterUsername=Entrez le nom d'utilisateur
 loginPassword=Mot de passe:
 enterPassword=Entrez le mot de passe
+#sign-up.html
 usernameInUse=Ce nom d'utilisateur est déjà utilisé.
 passwordsNotMatching=Les mots de passe NE correspondent PAS.
 emailInUse=Cet e-mail est déjà utilisé.
@@ -59,6 +70,7 @@ firstName=Prénom:
 lastName=Nom de famille:
 registerEmail=E-mail:
 registerPhone=Téléphone:
+#test-create.html
 testName=Nom du test:
 description=Description:
 optional=(Optionnel)
@@ -71,18 +83,23 @@ questionsCount=Nombre de questions:
 status=Statut:
 openClosed=(ouvert/fermé)
 next=suivant
+#test-details.html
 responseTime=Temps de réponse:
 updatedAt=Mis à jour à:
 creator=Créateur:
 correctAnswerr=Bonne réponse:
+deleteTest = Supprimer l'essai
+#test-join.html
 enterTestCode=Entrez le code du test:
 join=rejoindre
 testNotFound=Désolé, nous n'avons pas trouvé ce test!
 testClosed=Désolé, il semble que le test soit fermé!
 testAttended=Désolé, vous avez déjà assisté à ce test!
+#test-preview.html
 madeBy=Fait par
 createdAt=Créé à:
 start=Commencer
+#user-home.html
 testOfTheDay=Test du jour
 check=vérifier
 miscellaneous=Divers
