--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -13,21 +13,29 @@ features=Функции
 pricing=Цены
 faqs=FAQs
 about=О нас
+#all-tests.html
 thereArentAnyTestSoFar=Пока нет ни одного теста.
 details=детали
+#failure/success .html
 failureMessage=Упс! Что-то пошло не так...
 successMessage=Все в порядке!
 homePage=Главная страница
+#impr-ideas.html
 disapprove=Не одобрять
+#index.html
 welcome=Добро пожаловать в TestingEz
 slogan=Начните тестировать кого угодно на что угодно!
 signIn=Войти
 signUp=Зарегистрироваться
+#my-results.html
 youDontHaveAnyResultsToShow=У вас нет результатов для показа.
 date=Дата:
+#my-tests.html
 youDontHaveAnyTestsSoFar=Пока нет ни одного теста.
 lastUpdated=Последнее обновление:
+#question-answer.html
 submit=отправить
+#questions-create.html
 questionNumber=Вопрос №
 enterYourQuestion=Введите свой вопрос
 enterAnswer1=Введите ответ 1
@@ -38,15 +46,18 @@ correctAnswer=правильный ответ
 points=баллы
 complete=Завершить
 cancel=Отмена
+#show-results.html
 resultSummary=Сводка результатов
 score=Оценка:
 pointss=Баллы:
+#sign-in.html
 invalidCredentials=Неверные учетные данные
 login=Войти
 loginUsername=Имя пользователя:
 enterUsername=Введите имя пользователя
 loginPassword=Пароль:
 enterPassword=Введите пароль
+#sign-up.html
 usernameInUse=Это имя пользователя уже используется.
 passwordsNotMatching=Пароли НЕ совпадают.
 emailInUse=Этот адрес электронной почты уже используется.
@@ -59,6 +70,7 @@ firstName=Имя:
 lastName=Фамилия:
 registerEmail=Электронная почта:
 registerPhone=Телефон:
+#test-create.html
 testName=Название теста:
 description=Описание:
 optional=(Необязательно)
@@ -71,19 +83,24 @@ questionsCount=Количество вопросов:
 status=Статус:
 openClosed=(открыт/закрыт)
 next=далее
+#test-details.html
 responseTime=Время ответа:
 updatedAt=Обновлено:
 creator=Создатель:
 correctAnswerr=Правильный ответ:
+deleteTest = Удалить тест
+#test-join.html
 enterTestCode=Введите код теста:
 join=присоединиться
 testNotFound=Извините, мы не смогли найти этот тест!
 testClosed=Извините, похоже, тест закрыт!
 testAttended=Извините, вы уже прошли этот тест!
 madeBy=Сделано
+#test-preview.html
 createdAt=Создано:
 start=Начать
 testOfTheDay=Тест дня
+#user-home.html
 check=проверить
 miscellaneous=Разное
 bored=Скучно?
