question-add.html created for adding a new question to existing test

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -129,6 +129,9 @@ save=save
 pleaseType=Please, type the following:
 confirmation=I DEFINITELY want to DELETE my ACCOUNT.
 confirm=Confirm
+#question-add.html
+newQuestion=New Question
+testAttendance=Sorry, the test cannot be modified anymore, because it has been attended!
 #dto exceptions
 property.should.not.be.null=Property should not be null.
 property.should.not.be.empty=Property should not be empty.
