new button for deleting questions added, new recycle-bin image added

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -47,7 +47,7 @@ points=points
 complete=Complete
 cancel=Cancel
 #show-results.html
-resultSummary = Result Summary
+resultSummary=Result Summary
 score=Score:
 pointss=Points:
 #sign-in.html
@@ -88,7 +88,9 @@ responseTime=Response Time:
 updatedAt=Updated At:
 creator=Creator:
 correctAnswerr=Correct answer:
-deleteTest = Delete Test
+deleteTest=Delete Test
+testAttendance=Sorry, the test cannot be modified anymore, because it has been attended!
+changesApplied=Changes applied!
 #test-join.html
 enterTestCode=Enter Test Code:
 join=join
@@ -131,7 +133,6 @@ confirmation=I DEFINITELY want to DELETE my ACCOUNT.
 confirm=Confirm
 #question-add.html
 newQuestion=New Question
-testAttendance=Sorry, the test cannot be modified anymore, because it has been attended!
 #dto exceptions
 property.should.not.be.null=Property should not be null.
 property.should.not.be.empty=Property should not be empty.
