--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -89,6 +89,8 @@ updatedAt=Актуализиран на:
 creator=Създател:
 correctAnswerr=Правилен отговор:
 deleteTest=Изтрий Тест
+testAttendance=Съжаляваме, тестът не може да се редактира повече, защото някой вече е присъствал!
+changesApplied=Промените са приложени!
 #test-join.html
 enterTestCode=Въведете код за тест:
 join=присъединяване
