--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -90,6 +90,8 @@ creator=Ersteller:
 correctAnswerr=Richtige Antwort:
 enterTestCode=Testcode eingeben:
 deleteTest = Test löschen
+testAttendance=Der Test kann leider nicht mehr geändert werden, da er bereits absolviert ist!
+changesApplied=Änderungen angewendet!
 #test-join.html
 join=beitreten
 testNotFound=Entschuldigung, wir konnten diesen Test nicht finden!
