--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -89,6 +89,8 @@ updatedAt=Mis à jour à:
 creator=Créateur:
 correctAnswerr=Bonne réponse:
 deleteTest = Supprimer l'essai
+testAttendance=Désolé, le test ne peut plus être modifié, car il a été suivi!
+changesApplied=Modifications appliquées!
 #test-join.html
 enterTestCode=Entrez le code du test:
 join=rejoindre
@@ -99,7 +101,7 @@ testAttended=Désolé, vous avez déjà assisté à ce test!
 madeBy=Fait par
 createdAt=Créé à:
 start=Commencer
-#user-home.html
+#user-home.htmlФ
 testOfTheDay=Test du jour
 check=vérifier
 miscellaneous=Divers
