--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -89,6 +89,8 @@ updatedAt=Обновлено:
 creator=Создатель:
 correctAnswerr=Правильный ответ:
 deleteTest = Удалить тест
+testAttendance=Извините, тест больше не может быть изменен, так как он уже пройден!
+changesApplied=Изменения внесены!
 #test-join.html
 enterTestCode=Введите код теста:
 join=присоединиться
