--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -16,6 +16,8 @@ about=About
 #all-tests.html
 thereArentAnyTestSoFar=There aren't any tests so far.
 details=details
+#all-users.html
+view=view
 #failure/success .html
 failureMessage=Oops! Something went wrong...
 successMessage=Everything is alright!
