--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -16,6 +16,8 @@ about=Über uns
 #all-tests.html
 thereArentAnyTestSoFar=Es gibt noch keine Tests.
 details=Einzelheiten
+#all-users.html
+view=sicht
 #failure/success .html
 failureMessage=Ups! Etwas ist schief gelaufen...
 successMessage=Alles ist in Ordnung!
