--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -16,6 +16,8 @@ about=À propos
 #all-tests.html
 thereArentAnyTestSoFar=Il n'y a pas encore de tests.
 details=détails
+#all-users.html
+view=voir
 #failure/success .html
 failureMessage=Oups! Quelque chose s'est mal passé...
 successMessage=Tout va bien!
