--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -16,6 +16,8 @@ about=О нас
 #all-tests.html
 thereArentAnyTestSoFar=Пока нет ни одного теста.
 details=детали
+#all-users.thml
+view=вид
 #failure/success .html
 failureMessage=Упс! Что-то пошло не так...
 successMessage=Все в порядке!
