--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -29,6 +29,9 @@ welcome=Welcome to TestingEz
 slogan=Start testing whomever you want on whatever you want!
 signIn=Sign In
 signUp=Sign Up
+#leaderboard.html
+leaderboard=Leaderboard for test
+result=Result:
 #my-results.html
 youDontHaveAnyResultsToShow=You don't have any results to show.
 date=Date:
