--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -29,6 +29,9 @@ welcome=Добре дошли в TestingEz
 slogan=Започнете да тествате когото искате на каквото искате!
 signIn=Вход
 signUp=Регистрация
+#leaderboard.html
+leaderboard=Класиране за тест
+result=Резултат:
 #my-results.html
 youDontHaveAnyResultsToShow=Нямате резултати за показване.
 date=Дата:
