--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -29,6 +29,9 @@ welcome=Willkommen bei TestingEz
 slogan=Beginnen Sie, jeden zu testen, auf was auch immer Sie wollen!
 signIn=Anmelden
 signUp=Registrieren
+#leaderboard.html
+leaderboard=Bestenliste zum Testen
+result=Ergebnis:
 #my-results.html
 youDontHaveAnyResultsToShow=Sie haben keine Ergebnisse zum Anzeigen.
 date=Datum:
