--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -29,6 +29,9 @@ welcome=Добро пожаловать в TestingEz
 slogan=Начните тестировать кого угодно на что угодно!
 signIn=Войти
 signUp=Зарегистрироваться
+#leaderboard.html
+leaderboard=Таблица лидеров для теста
+result=Результат:
 #my-results.html
 youDontHaveAnyResultsToShow=У вас нет результатов для показа.
 date=Дата:
