Implementing logic behind All Users and also creating leaderboard (#62)
* working remember-me option added

* all-users.html created

* new endpoint /user/all created for accessing all users page

* ThinProfileDTO created for displaying only the avatar and the username of the profile

* logic implemented in service to get all the users and map them to dtos

* comments

* tests commented

* leaderboard.html created

* logic implemented behind button leaderboard, it appears on every test details

* comments

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -16,6 +16,8 @@ about=About
 #all-tests.html
 thereArentAnyTestSoFar=There aren't any tests so far.
 details=details
+#all-users.html
+view=view
 #failure/success .html
 failureMessage=Oops! Something went wrong...
 successMessage=Everything is alright!
@@ -27,6 +29,9 @@ welcome=Welcome to TestingEz
 slogan=Start testing whomever you want on whatever you want!
 signIn=Sign In
 signUp=Sign Up
+#leaderboard.html
+leaderboard=Leaderboard for test
+result=Result:
 #my-results.html
 youDontHaveAnyResultsToShow=You don't have any results to show.
 date=Date:
