--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -16,6 +16,8 @@ about=Über uns
 #all-tests.html
 thereArentAnyTestSoFar=Es gibt noch keine Tests.
 details=Einzelheiten
+#all-users.html
+view=sicht
 #failure/success .html
 failureMessage=Ups! Etwas ist schief gelaufen...
 successMessage=Alles ist in Ordnung!
@@ -27,6 +29,9 @@ welcome=Willkommen bei TestingEz
 slogan=Beginnen Sie, jeden zu testen, auf was auch immer Sie wollen!
 signIn=Anmelden
 signUp=Registrieren
+#leaderboard.html
+leaderboard=Bestenliste zum Testen
+result=Ergebnis:
 #my-results.html
 youDontHaveAnyResultsToShow=Sie haben keine Ergebnisse zum Anzeigen.
 date=Datum:
