--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -16,6 +16,8 @@ about=À propos
 #all-tests.html
 thereArentAnyTestSoFar=Il n'y a pas encore de tests.
 details=détails
+#all-users.html
+view=voir
 #failure/success .html
 failureMessage=Oups! Quelque chose s'est mal passé...
 successMessage=Tout va bien!
@@ -27,6 +29,9 @@ welcome=Bienvenue chez TestingEz
 slogan=Commencez à tester qui vous voulez sur ce que vous voulez!
 signIn=Se connecter
 signUp=S'inscrire
+#leaderboard.html
+leaderboard=Classement pour le test
+result=Résultat:
 #my-results.html
 youDontHaveAnyResultsToShow=Vous n'avez aucun résultat à afficher.
 date=Date:
