new endpoint created for accessing different people profiles - /user/profile/{id}

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -125,12 +125,12 @@ helpUs=Help us make "TestingEz" better!
 howToImprove=How to improve?
 send=SEND
 thanks=Thanks! Your improvement idea was sent!
-#user-profile.html
+#my-profile.html
 myProfile=My Profile
 change=change
 editProfile=Edit profile
 deleteAccount=Delete Account
-#user-profile-edit.html
+#my-profile-edit.html
 save=save
 #account-delete.html
 pleaseType=Please, type the following:
