--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -125,12 +125,12 @@ helpUs=Помогнете ни да направим "TestingEz" по-добър
 howToImprove=Как да подобрим?
 send=ИЗПРАТЕТЕ
 thanks=Благодарим ви! Вашата идея за подобрение беше изпратена!
-#user-profile.html
+#my-profile.html
 myProfile=Моят профил
 change=промяна
 editProfile=Редактиране на профил
 deleteAccount=Изтриване на акаунт
-#user-profile-edit.html
+#my-profile-edit.html
 save=запази
 #account-delete.html
 pleaseType=Моля, въведете следното:
