--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -125,12 +125,12 @@ helpUs=Helfen Sie uns, "TestingEz" zu verbessern!
 howToImprove=Wie zu verbessern?
 send=Senden
 thanks=Danke! Ihre Verbesserungsidee wurde gesendet!
-#user-profile.html
+#my-profile.html
 myProfile=Mein Profil
 change=ändern
 editProfile=Profil bearbeiten
 deleteAccount=Konto löschen
-#user-profile-edit.html
+#my-profile-edit.html
 save=speichern
 #account-delete.html
 pleaseType=Bitte geben Sie Folgendes ein:
