--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -125,12 +125,12 @@ helpUs=Aidez-nous à rendre "TestingEz" meilleur!
 howToImprove=Comment améliorer?
 send=ENVOYER
 thanks=Merci! Votre idée d'amélioration a été envoyée!
-#user-profile.html
+#my-profile.html
 myProfile=Mon profil
 change=changer
 editProfile=Modifier le profil
 deleteAccount=Supprimer le compte
-#user-profile-edit.html
+#my-profile-edit.html
 save=sauvegarder
 #account-delete.html
 pleaseType=Veuillez taper ce qui suit :
