--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -125,12 +125,12 @@ helpUs=Помогите нам сделать "TestingEz" лучше!
 howToImprove=Как улучшить?
 send=ОТПРАВИТЬ
 thanks=Спасибо! Ваша идея по улучшению была отправлена!
-#user-profile.html
+#my-profile.html
 myProfile=Мой профиль
 change=изменить
 editProfile=Редактировать профиль
 deleteAccount=Удалить аккаунт
-#user-profile-edit.html
+#my-profile-edit.html
 save=сохранить
 #account-delete.html
 pleaseType=Пожалуйста, введите следующее:
