the process of deleting accounts improved:

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -134,7 +134,7 @@ deleteAccount=Delete Account
 save=save
 #account-delete.html
 pleaseType=Please, type the following:
-confirmation=I DEFINITELY want to DELETE my ACCOUNT.
+confirmation=I DEFINITELY want to DELETE this ACCOUNT.
 confirm=Confirm
 #question-add.html
 newQuestion=New Question
