--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -134,7 +134,7 @@ deleteAccount=Изтриване на акаунт
 save=запази
 #account-delete.html
 pleaseType=Моля, въведете следното:
-confirmation=Определено искам да ИЗТРИЯ акаунта си.
+confirmation=Определено искам да ИЗТРИЯ този акаунт.
 confirm=Потвърдете
 #dto exceptions
 property.should.not.be.null=Свойството не трябва да бъде нулево.
