feedback.html created

--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -10,7 +10,7 @@ logout=Изход
 #footer.html
 footerHome=Начало
 features=Функции
-pricing=Цени
+feedback=Обратна връзка
 faqs=ЧЗВ
 about=За нас
 #all-tests.html
