--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -10,7 +10,7 @@ logout=Abmelden
 #footer.html
 footerHome=Startseite
 features=Funktionen
-pricing=Preise
+feedback=Rückmeldung
 faqs=FAQs
 about=Über uns
 #all-tests.html
