--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -10,7 +10,7 @@ logout=Se déconnecter
 #footer.html
 footerHome=Accueil
 features=Caractéristiques
-pricing=Tarification
+feedback=retour
 faqs=FAQs
 about=À propos
 #all-tests.html
