--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -10,7 +10,7 @@ logout=Выйти
 #footer.html
 footerHome=Главная
 features=Функции
-pricing=Цены
+feedback=обратная связь
 faqs=FAQs
 about=О нас
 #all-tests.html
