refactoring code related to feedback

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -22,7 +22,7 @@ view=view
 failureMessage=Oops! Something went wrong...
 successMessage=Everything is alright!
 homePage=Home Page
-#impr-ideas.html
+#feedback-ideas.html
 disapprove=Disapprove
 #index.html
 welcome=Welcome to TestingEz
