--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -22,7 +22,7 @@ view=виж
 failureMessage=Упс! Нещо се обърка...
 successMessage=Всичко е наред!
 homePage=Начална страница
-#impr-ideas.html
+#feedback-ideas.html
 disapprove=Не одобрявам
 #index.html
 welcome=Добре дошли в TestingEz
