--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -22,7 +22,7 @@ view=sicht
 failureMessage=Ups! Etwas ist schief gelaufen...
 successMessage=Alles ist in Ordnung!
 homePage=Startseite
-#impr-ideas.html
+#feedback-ideas.html
 disapprove=Ablehnen
 #index.html
 welcome=Willkommen bei TestingEz
