--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -22,7 +22,7 @@ view=voir
 failureMessage=Oups! Quelque chose s'est mal passé...
 successMessage=Tout va bien!
 homePage=Page d'accueil
-#impr-ideas.html
+#feedback-ideas.html
 disapprove=Désapprouver
 #index.html
 welcome=Bienvenue chez TestingEz
