--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -22,7 +22,7 @@ view=вид
 failureMessage=Упс! Что-то пошло не так...
 successMessage=Все в порядке!
 homePage=Главная страница
-#impr-ideas.html
+#feedback-ideas.html
 disapprove=Не одобрять
 #index.html
 welcome=Добро пожаловать в TestingEz
