--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -23,6 +23,7 @@ failureMessage=Упс! Нещо се обърка...
 successMessage=Всичко е наред!
 homePage=Начална страница
 #feedback-ideas.html
+approve=Одобрявам
 disapprove=Не одобрявам
 #index.html
 welcome=Добре дошли в TestingEz
