--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -23,6 +23,7 @@ failureMessage=Oups! Quelque chose s'est mal passé...
 successMessage=Tout va bien!
 homePage=Page d'accueil
 #feedback-ideas.html
+approve=approuver
 disapprove=Désapprouver
 #index.html
 welcome=Bienvenue chez TestingEz
