--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -23,6 +23,7 @@ failureMessage=Упс! Что-то пошло не так...
 successMessage=Все в порядке!
 homePage=Главная страница
 #feedback-ideas.html
+approve=утвердить
 disapprove=Не одобрять
 #index.html
 welcome=Добро пожаловать в TestingEz
