--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -23,6 +23,7 @@ failureMessage=Ups! Etwas ist schief gelaufen...
 successMessage=Alles ist in Ordnung!
 homePage=Startseite
 #feedback-ideas.html
+approve=genehmigen
 disapprove=Ablehnen
 #index.html
 welcome=Willkommen bei TestingEz
