Improving ideas transformed to feedback system (#65)
* feedback.html created

* acceessing the feedback page made possible

* the improvements logic in user controller moved to new FeedbackController

* it is not longer required to be authenticated in order to submit a feedback

* refactoring code related to feedback

* admins now can approve or disapprove feedback

* admins can now approve and disapprove feedback only once

* disapproved feedbacks are automatically deleted every hour

--- a/TestingEz/src/main/resources/i18n/messages.properties
+++ b/TestingEz/src/main/resources/i18n/messages.properties
@@ -10,7 +10,7 @@ logout=Log out
 #footer.html
 footerHome=Home
 features=Features
-pricing=Pricing
+feedback=Feedback
 faqs=FAQs
 about=About
 #all-tests.html
@@ -22,7 +22,8 @@ view=view
 failureMessage=Oops! Something went wrong...
 successMessage=Everything is alright!
 homePage=Home Page
-#impr-ideas.html
+#feedback-ideas.html
+approve=Approve
 disapprove=Disapprove
 #index.html
 welcome=Welcome to TestingEz
