--- a/TestingEz/src/main/resources/i18n/messages_bg.properties
+++ b/TestingEz/src/main/resources/i18n/messages_bg.properties
@@ -10,7 +10,7 @@ logout=Изход
 #footer.html
 footerHome=Начало
 features=Функции
-pricing=Цени
+feedback=Обратна връзка
 faqs=ЧЗВ
 about=За нас
 #all-tests.html
@@ -22,7 +22,8 @@ view=виж
 failureMessage=Упс! Нещо се обърка...
 successMessage=Всичко е наред!
 homePage=Начална страница
-#impr-ideas.html
+#feedback-ideas.html
+approve=Одобрявам
 disapprove=Не одобрявам
 #index.html
 welcome=Добре дошли в TestingEz
