--- a/TestingEz/src/main/resources/i18n/messages_de.properties
+++ b/TestingEz/src/main/resources/i18n/messages_de.properties
@@ -10,7 +10,7 @@ logout=Abmelden
 #footer.html
 footerHome=Startseite
 features=Funktionen
-pricing=Preise
+feedback=Rückmeldung
 faqs=FAQs
 about=Über uns
 #all-tests.html
@@ -22,7 +22,8 @@ view=sicht
 failureMessage=Ups! Etwas ist schief gelaufen...
 successMessage=Alles ist in Ordnung!
 homePage=Startseite
-#impr-ideas.html
+#feedback-ideas.html
+approve=genehmigen
 disapprove=Ablehnen
 #index.html
 welcome=Willkommen bei TestingEz
