--- a/TestingEz/src/main/resources/i18n/messages_fr.properties
+++ b/TestingEz/src/main/resources/i18n/messages_fr.properties
@@ -10,7 +10,7 @@ logout=Se déconnecter
 #footer.html
 footerHome=Accueil
 features=Caractéristiques
-pricing=Tarification
+feedback=retour
 faqs=FAQs
 about=À propos
 #all-tests.html
@@ -22,7 +22,8 @@ view=voir
 failureMessage=Oups! Quelque chose s'est mal passé...
 successMessage=Tout va bien!
 homePage=Page d'accueil
-#impr-ideas.html
+#feedback-ideas.html
+approve=approuver
 disapprove=Désapprouver
 #index.html
 welcome=Bienvenue chez TestingEz
