--- a/TestingEz/src/main/resources/i18n/messages_ru.properties
+++ b/TestingEz/src/main/resources/i18n/messages_ru.properties
@@ -10,7 +10,7 @@ logout=Выйти
 #footer.html
 footerHome=Главная
 features=Функции
-pricing=Цены
+feedback=обратная связь
 faqs=FAQs
 about=О нас
 #all-tests.html
@@ -22,7 +22,8 @@ view=вид
 failureMessage=Упс! Что-то пошло не так...
 successMessage=Все в порядке!
 homePage=Главная страница
-#impr-ideas.html
+#feedback-ideas.html
+approve=утвердить
 disapprove=Не одобрять
 #index.html
 welcome=Добро пожаловать в TestingEz
